# LocalStorage

./: .gitignore  README.md  __init__.py  example.py  pyproject.toml
exceptions/: __init__.py
localstorage/: __init__.py  __init__.pyi
localstorage/exceptions/: __init__.py
