[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localstorage"
version = "1.0.0"
description = "Localstorage for python with more tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "tromoSM" }
]
requires-python = ">=3.6"

dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[tool.setuptools]
py-modules = ["localstorage"]