[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localstorage"
version = "1.0.2"
description = "Localstorage for python with more tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "tromoSM" }
]
requires-python = ">=3.6"
maintainers = [{name = "tromoSM", email = "tromoSM7@gmail.com"}]
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[tool.setuptools]
packages = ["localstorage"]


[project.urls]
Homepage = "https://tromosm.gt.tc/?utm_source=pypiOthr_localstorage#project"
Source = "https://github.com/tromoSM/LocalStorage"
"Feedback/requests" = "https://tromosm.gt.tc/?utm_source=pypiFeed_localstorage&feedback=true"